...
                                        <rect key="frame" x="20" y="20" width="348" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="mwr-ZS-Hih"/>
                                        </constraints>
                                        <color key="tintColor" systemColor="systemBackgroundColor"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="Log in"/>
                                        <connections>
                                            <action selector="logInButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Pf9-GZ-9v9"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mzq-R3-UkF" customClass="ButtonClassBlue" customModule="DoctorAppointmentBookingApp" customModuleProvider="target">
                                        <rect key="frame" x="20" y="90" width="348" height="50"/>
...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="N4a-yi-bWj"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bgG-6n-ySx" customClass="TextFieldDesign" customModule="DoctorAppointmentBookingApp" customModuleProvider
                                        <rect key="frame" x="20" y="90" width="348" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Bwt-Cr-Hvp"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="Fa6-4S-oM6"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d6O-5W-46T" customClass="TextFieldDesign" customModule="DoctorAppointmentBookingApp" customModuleProvi
                                        <rect key="frame" x="20" y="230" width="348" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="jYC-nS-dMa"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
...
