...
        let sun = sunTextField.text!
        
        doctorViewModel.updateDoctor(doctorId: doctor!.id, name: name, phoneNumber: phoneNumber, service: service, worksAt: worksAt, consultancyFee: consultancyFee, mon: mon, tue: tue, wed: wed, thu: thu, fri: fri, sat: sat, sun: sun) { success in
            if success {
                self.navigateToDoctorProfile()
            } else {
                let alert = UIAlertController(title: "Error", message: "There was an error!", preferredStyle: UIAlertController.Style.alert)
                alert.addAction(UIAlertAction(title: "OK", style: UIAlertAction.Style.default, handler: nil))
                self.present(alert, animated: true, completion: nil)
            }
            
        }
    }
    
...
